welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Boolean(false)
 required: com.sun.org.apache.xpath.internal.operations.Bool
var vueBiscuit: Bool = false;
                       ^Program:8: error: type mismatch;
 found   : Boolean(true)
 required: com.sun.org.apache.xpath.internal.operations.Bool
		vueBiscuit = true;
                             ^Program:11: error: type mismatch;
 found   : com.sun.org.apache.xpath.internal.operations.Bool
 required: Boolean
return vueBiscuit;
       ^