welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var n: Int = 0;
var vueBiscuit: Bool = false;
for(n <- 1 to 7){
	avance();
	if(estSurBiscuit){
		vueBiscuit = true;
	}
}
return vueBiscuit;
}
